# template.python.lib

./: .gitignore  CHANGELOG.md  README.md  deploy.py  pre-commit-config.yaml  pyproject.toml  sonarqube-unix.sh  sonarqube.sh
.github/workflows/: docs.yml  tests.yml
docs/: conf.py  index.md
src/template/: __init__.py  template.py
src/template/tests/: test_template.py
src/templatelib/: __init__.py  template.py
src/templatelib/tests/: __init__.py  test_template.py
